# django-template

./: .gitignore  README.md
.github/workflows/: backend.yml
backend/: .flake8  README.md  pyproject.toml
backend/base/: admin.py  manager.py  models.py  tests.py
backend/base/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_active.py
backend/base/templates/base/: base.html  home.html
backend/base/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_done.html  password_reset_form.html
backend/base/tests/: test_manager.py
backend/core/: s3_file_handlers.py  settings.py  urls.py
backend/core/base/: admin.py
backend/core/base/migrations/: 0001_initial.py
backend/core/base/templates/base/: base.html
backend/core/base/templates/registration/: password_reset_complete.html  password_reset_confirm.html
backend/core/base/tests/: test_home.py  test_manager.py
backend/core/django_min_custom_user/: admin.py  models.py
config/: README.md  env-sample
docker/: README.md  docker-compose copy.yml  docker-compose.yml  nginx.conf
docker/staticfiles/static/: teste.html
