[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Template de projeto Django com as boas práticas de desenvolvimento de software"
authors = ["Luiz Fernando <luiz-fernando@outlook.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
