[tool.poetry]
name = "django-template"
version = "0.1.0"
description = "Template de projeto Django com as boas práticas de desenvolvimento de software"
authors = ["Luiz Fernando <luiz-fernando@outlook.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.8.0"
flake8 = "^7.1.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["test*.py", "*test.py", "testing/python/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
